--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
     It also has a great location that I can get to easily.</p>
 
     <p>I expect to learn the basics of information technology in this course, including programming, security and protection, hardware and software, databases and database management, website building, user experience and design and much more about the overall world of IT.</p>
-    <hr>
 
-    <h2>Ideal Job</h2>
+    <h3>Ideal Job</h3>
+    <p><img src="Ideal_Job.png" style="width:250px;height:260px;"> This is an example of a job that I would be interested in going for. The role itself is a senior programmer for a “fast-growing gaming company” known as PlaySide. The role would require me to work with a team of programmers and developers to develop games for PC and other platforms. The role also searches for those who a strong interest in games and the gaming community.</p>
+    <p>The skills required for this position include solid math skills, good communication skills, a passion for making games, the ability to work on multiple tasks concurrently, enjoys working with peers from different teams, strong attention to detail and can work without the need to be directed. Some of the required qualifications include at least 6-7 years’ worth of experience using the Unity game engine, been involved in at least 1 or 2 major IOS/Android projects, a strong background in C#, and a tertiary degree or an equivalent professional qualification in a relevant field. </p>
+    <p>I currently do not have any of the specified qualifications required for this position, as I do not have at least 6 or 7 years of experience using Unity, I have not been involved in any major IOS/Android projects, I am not strong with coding and I don’t have a professional qualification. I do have some of the required skills, as I have great communication skills and I can work with others in teams to solve problems and create solutions, and I am able to work without needing to be directed, have great math skills and while I don’t know how to do I, I am very passionate about making games.</p>
+    <p>To gain the required skills to be able to qualify for a position like this I will complete my university course which will hopefully give me lots of skills based around technology and programming. I will also start to learn how to use the Unity game engine and also begin in my own personal projects in the future to give myself some experience in making games.</p>
+ 
+    <h4>Personal Profile</h4>
+    <p><img src="Personality_Results.png" style="width:250px;height:260px;"><a href="https://www.16personalities.com/isfp-personality>Myers-Briggs Test Results</a></p<
+    <p>According to this test, I am “The Adventurer (ISFP-T)”, which means that I am “happy to be myself”, that I believe that meaning is in every expression of life. Some of the strengths of this personality type include being imaginative, passionate, curious, sensitive to others, artistic and charming. Some of the weaknesses include being fiercely independent, unpredictable, easily stressed, overly competitive and fluctuating self-esteem.</p>
+    
 
-  </body>
+ </body>
 <html>
