--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <p>To gain the required skills to be able to qualify for a position like this I will complete my university course which will hopefully give me lots of skills based around technology and programming. I will also start to learn how to use the Unity game engine and also begin in my own personal projects in the future to give myself some experience in making games.</p>
  
     <h4>Personal Profile</h4>
-    <p><img src="Personality_Results.png" style="width:250px;height:260px;"><a href="https://www.16personalities.com/isfp-personality>Myers-Briggs Test Results</a></p<
-    <p>According to this test, I am “The Adventurer (ISFP-T)”, which means that I am “happy to be myself”, that I believe that meaning is in every expression of life. Some of the strengths of this personality type include being imaginative, passionate, curious, sensitive to others, artistic and charming. Some of the weaknesses include being fiercely independent, unpredictable, easily stressed, overly competitive and fluctuating self-esteem.</p>
+    <p><img src="Personality_Results.png" style="width:250px;height:260px;"> <a href="https://www.16personalities.com/isfp-personality">Myers-Briggs Test Results</a>
+    According to this test, I am “The Adventurer (ISFP-T)”, which means that I am “happy to be myself”, that I believe that meaning is in every expression of life. Some of the strengths of this personality type include being imaginative, passionate, curious, sensitive to others, artistic and charming. Some of the weaknesses include being fiercely independent, unpredictable, easily stressed, overly competitive and fluctuating self-esteem.</p>
     
 
  </body>
