--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
 <h1>My Website</h1>
 
+    <h2>Personal Information</h2>
+    <p><img src="RMIT_Photo.jpg.PNG" style="width:250px;height:260px;">My name is Domenic, but most people call me Dom which I prefer anyways. I was born and raised in Melbourne and I am a first-year student after graduating from High School and I am studying Bachelor of Information Technology. I chose to study at RMIT for multiple reasons, but mainly because of its reputation of being an excellent technology-based university and the location. I enjoy gaming, especially games like Call of Duty, NBA2K, Pokémon, Fortnite and Terraria. I also have a large passion for basketball and the NBA. I really enjoy programming and while I only know the basics, I am trying to learn more and improve as programming is what I wish to pursue in my career. I don’t have much of an idea for the IT project yet, but I will be thinking of an idea.
+
     <h2>Interest in IT</h2>
     <p> I am most interested in the programming aspect of IT.
     Ever since I was a kid I always wanted to make my own game and I wanted to be the game designer until a few years ago when I realised I wasn’t that good at drawing or designing.
